# zuse

./: .gitignore  Cargo.toml  readme.md  tests.yml
.github/workflows/: ci.yml  release.yml
ci/: ubuntu-install-packages
src/: main.rs
