[package]
name = "zuse"
version = "0.4.8"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
license = "MIT"
repository = "https://github.com/19h/zuse"
description = "A flexible high-performance uptime bot powered by async Rust with Telegram, SNS and Slack notification backends."
readme = "readme.md"
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "zuse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
serde = "1.0.123"
serde_yaml = "0.8.17"
serde_derive = "1.0.123"
clap = "2.33.3"
futures = "0.3.12"
telegram-bot = "0.8.0"
tokio = { version = "1.2.0", features = ["macros", "time", "fs", "sync"] }
mpmc = "0.1.5"
reqwest = "0.11.1"
hyper = "0.14.4"
base64 = "0.13.0"
rusoto_core = "0.46.0"
rusoto_sns = "0.46.0"
rusoto_sts = "0.46.0"
handlebars = "3.5.2"
url = "2.2.1"
serde_json = "1.0.62"
version_check = "0.9.2"
native-tls = "0.2.7"

[target.i686-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }

[target.arm-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }

[profile]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
