[package]
name = "zuse"
version = "0.5.1-alpha.0"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
license = "MIT"
repository = "https://github.com/19h/zuse"
description = "A flexible high-performance uptime bot powered by async Rust with Telegram, SNS and Slack notification backends."
readme = "readme.md"
edition = "2021"

[[bin]]
bench = false
path = "src/main.rs"
name = "zuse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
serde = "1.0.137"
serde_yaml = "0.8.24"
serde_derive = "1.0.137"
clap = "3.1.16"
futures = "0.3.21"
tokio = { version = "1.18.1", features = ["macros", "time", "fs", "sync"] }
mpmc = "0.1.6"
reqwest = "0.11.10"
hyper = "0.14.18"
base64 = "0.13.0"
rusoto_core = "0.48.0"
rusoto_sns = "0.48.0"
rusoto_sts = "0.48.0"
handlebars = "4.2.2"
url = "2.2.2"
serde_json = "1.0.81"
version_check = "0.9.4"
native-tls = "0.2.10"
pw-telegram-bot-fork = "0.9.0"

[target.i686-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }

[target.arm-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }

[profile]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
